# filepatch

./: .gitignore  LICENSE  README.md  patch.py  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: pythonpackage.yml
filepatch/: __init__.py  __main__.py  hunk.py  patch.py  patchset.py  utils.py  wrap_enumerate.py
tests/: test_all.py  test_check_patched.py  test_helpers.py  test_patch_apply.py  test_patch_files.py  test_patch_parse.py  test_patchset_detection.py
